--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>ReworkPlan</title>
+		<title>个人工作计划 </title>
 		<meta name="keywords" content="reworkpaln, duoduo369" />
 		<link rel="shortcut icon" href="http://cdn.reworkplan.com/avator.jpg">
 		<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700italic' rel='stylesheet' type='text/css'>
@@ -19,8 +19,8 @@
 	<body>
 		<div class="game-holder" id="gameHolder">
 			<div class="header">
-				<h1>ReworkPlan</h1>
-				<h2>重新定义工作方式</h2>
+				<h1>个人工作计划</h1>
+				<h2>Reworkplan 重新定义工作方式</h2>
 				<div class="score" id="score">
 					<div class="score__content" id="level">
 						<div class="score__label">等级</div>
@@ -45,6 +45,9 @@
 			<div class="world" id="world"></div>
 			<div class="message message--replay" id="replayMessage">点击重试</div>
 			<div class="message message--instructions" id="instructions">抓取蓝色小球<span>躲避红色小球</span></div>
+      <div style=" position: absolute; left: 0; width: 100%; text-align: center; bottom: 10px; text-decoration: none; color: #222; font-size: 12; " >
+				鲁ICP备18035422号-18035422
+			</div>
 		</div>
 		<div class="partisan">
 			<svg class="partisan__bg" viewBox="0 0 500 188" preserveAspectRatio="none" width="100%" height="100%" aria-hidden="true">
