--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 			<div class="message message--replay" id="replayMessage">点击重试</div>
 			<div class="message message--instructions" id="instructions">抓取蓝色小球<span>躲避红色小球</span></div>
       <div style=" position: absolute; left: 0; width: 100%; text-align: center; bottom: 10px; text-decoration: none; color: #222; font-size: 12; " >
-				鲁ICP备18035422号-18035422
+        <a href="http://beian.miit.gov.cn" target="_blank"
+          style=" position: absolute; left: 0; width: 100%; text-align: center; bottom: 10px; text-decoration: none; color: #222; font-size: 12; " >
+				  鲁ICP备18035422号-18035422
+        </a>
 			</div>
 		</div>
 		<div class="partisan">
